syntax = "proto3";

package zrchain.zenbtc;

option go_package = "github.com/zenrocklabs/zenbtc/x/zenbtc/types";

message NonceData {
  uint64 nonce = 1;
  uint64 counter = 2;
  bool skip = 3;
}

message RequestedBitcoinHeaders {
  repeated int64 heights = 1;
}

message LockTransaction {
  string raw_tx = 1;
  uint64 vout = 2;
  string sender = 3;
  string mint_recipient = 4;
  uint64 amount = 5;
  uint64 block_height = 6;
}
